[Bugfix] Fix testimonial animation causing jumping of the next session

--- a/src/styles/6-components/_carousel-review.scss
+++ b/src/styles/6-components/_carousel-review.scss
@@ -14,6 +14,7 @@ $clr-highlight: $color-red;
 
 .c-reviews__carousel-controls {
   width: 50%;
+  height: 5rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
